# Master-Python-by-building-100-projects-in-100-days

./: README.md  course-info.yaml
Archive/Day 17/: main.py
Archive/Day 18/: main.py
Archive/Day 21/: Class_Inheritance.py  main.py  scoreboard.py
Archive/Day 22/: ball.py  paddle.py  scoreboard.py
Archive/Day 23/: car_manager.py  new_file.txt
Archive/Day 27/: Other_Tkinter_Widgets.py  mile_to_kilo_converter.py
Archive/Day37/: main.py
Archive/Day46/: README.md  config.py  main.py  main_refactored.py
Archive/Day47/: README.md  config.py  main.py  main_refactored.py
Archive/Day48/: CookieClickerBot_refactored.py  interaction_refactored.py  main_refactored.py
Archive/Day49/: main.py  main_refactored.py
Archive/Day_30/NATO+Phonetic+Alphabet+for+the+Code+Exercise/: main.py  poetry_script_project_playbook.md  pyproject.toml
Day 19/: main.py
Day 20/: main.py  snake.py
Day 21/: snake.py
Day 22/: main.py
Day 23/: main.py  player.py  scoreboard.py
Day 24/: main.py
Day 26/: main.py
Day 27/: main.py  playground.py
Day 30/: main.py  non_existent_file.txt
Day33/: README.md  is_iss_overhead.py  main.py
Day35/: main.py  main_refactored.py
Day37/: README.md  main_refactored.py  pixela_client.py
Day38/: README.md  api_client.py  config.py  models.py
Day47/: main_refactored.py
Day48/: cookieclicker.py  interaction.py  main.py
Day49/: README.md
Day50/: README.md
Day51/: main.py
Day53/: README.md  README_answer.md  main.py  main_refactored.py
Day54/: app.py
Day55/: README.md  app.py  app_basic.py  app_refactored.py
(+155 files in other folders)
