[tool.poetry]
name = "nato-alphabet-end"
version = "0.1.0"
package-mode = false
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2"
numpy = "^2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
